[package]
name = "mokaccino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-symbols]
inherits = "release"
debug = "full"

[dependencies]
# audio I/O
cpal = "0.15.2"
# GUI
eframe = "0.22.0"
# image processing
image = "0.24.7"
# time formatting ect.
chrono = "0.4.31"
# random number generation
rand = "0.8.5"
# serialization
serde = { version = "1.0.188", features = ["derive"] }
# toml serialization
toml = "0.8.0"
rubato = "0.14.1"
opus = "0.3.0"

